--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
 In the event that the position that it is in is not the position that it wasn't, the system has acquired a variation, the variation being the difference between where the missile is, and where it wasn't. If variation is considered to be a significant factor, it too may be corrected by the GEA. However, the missile must also know where it was.
 The missile guidance computer scenario works as follows. Because a variation has modified some of the information the missile has obtained, it is not sure just where it is. However, it is sure where it isn't, within reason, and it knows where it was. It now subtracts where it should be from where it wasn't, or vice-versa, and by differentiating this from the algebraic sum of where it shouldn't be, and where it was, it is able to obtain the deviation and its variation, which is called error.</p>
 
-<img src="sidewinder balloon.jpg" alt="A 400K missile used on a chinese balloon" />
+<img src="sidewinder balloon.jpg" alt="A $400K missile used on a chinese balloon" />
 
 </body>
 
 
 </html>
+
 
